# busapp

./: .env.example  .gitignore  CLAUDE.md  README.md  harumi-bus-design.md  pyproject.toml
.github/workflows/: deploy-pages.yml  update-timetable.yml
app/: .gitkeep  app.js  index.html  manifest.webmanifest  style.css  sw.js
config/: my_stops.yaml
data/: .gitkeep  timetable.json
docs/: harumi-bus-design.md
pipeline/: build_timetable.py  fetch_brt.py  fetch_harumi.py  fetch_toei.py  holidays.py
pipeline/tests/: test_build_timetable.py  test_fetch_brt.py  test_fetch_toei.py  test_holidays.py
pipeline/tests/fixtures/: .gitkeep  syukujitsu_sample.csv
pipeline/tests/fixtures/brt/: b01-shimbashi.html  b22-harumi-brt-terminal.html  b33-harumi-flag.html
pipeline/tests/fixtures/toei_sample_gtfs/: calendar.txt  calendar_dates.txt  routes.txt  stop_times.txt  stops.txt  trips.txt
